fix header z-index.

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ header#header {
     position: fixed;
     width: 100%;
     background: #ffffff;
+    z-index: 1;
 }
 .header_wrap {
     overflow: hidden;
